--- a/src/WebApp/Pages/Staff/WorkEntries/Add.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Add.cshtml
@@ -5,6 +5,11 @@
     ViewData["Title"] = "Add A New Work Entry";
     ViewData["NoAnchors"] = "True";
 }
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css"/>
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js" defer></script>
+    <script src="~/js/SimpleMDE.js" defer></script>
+</head>
 
 <h1>@ViewData["Title"]</h1>
 
@@ -16,12 +21,14 @@
             </svg>
         </div>
 
+        <textarea id="MyID" rows="3"></textarea>
+
         <h2>Details</h2>
         <div class="row">
             <div class="col-md">
                 <div class="mb-3">
                     @Html.EditorFor(model => model.Item.Notes, EditorTemplate.Textarea,
-                        additionalViewData: new { Rows = 5 })
+                        additionalViewData: new { Rows = 5})
                 </div>
             </div>
             <div class="col-md">
