--- a/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
+++ b/src/WebApp/Pages/Staff/WorkEntries/Details.cshtml
@@ -201,9 +201,9 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/js/EasyMDE.js" defer></script>
+    <script src="~/lib/easymde/dist/easymde.min.js"></script>
     <script src="~/js/textarea-to-MDE.js" defer></script>
 }
 @section Styles {
-    <link rel="stylesheet" href="~/css/EasyMDE.css"/>
+    <link rel="stylesheet" href="~/lib/easymde/dist/easymde.min.css" />
 }
