--- a/src/WebApp/Pages/Shared/EditorTemplates/Textarea.cshtml
+++ b/src/WebApp/Pages/Shared/EditorTemplates/Textarea.cshtml
@@ -1,12 +1,19 @@
 ﻿@model string
 @{
     var rows = (int?)ViewData["Rows"] ?? 2;
-    bool MDE = (bool?)ViewData["MDE"]?? false;
-    string ClassMDE = (string?)ViewData["ClassMDE"] ?? "EasyMDE";
+    var mde = (bool?)ViewData["MDE"] ?? false;
+    var classMde = mde ? (string?)ViewData["ClassMDE"] ?? "EasyMDE" : "";
 }
 
-<div>
-    <textarea asp-for="@__model" class="form-control markdown @if(MDE){@ClassMDE.ToString();}" rows="@rows.ToString()"></textarea>
-    @if(!MDE){<label asp-for="@__model" class="form-label"></label>}
+<div class="@(mde ? "" : "form-floating")">
+    @if (mde)
+    {
+        <label asp-for="@__model" class="form-label"></label>
+    }
+    <textarea asp-for="@__model" class="form-control markdown @classMde" rows="@rows.ToString()"></textarea>
+    @if (!mde)
+    {
+        <label asp-for="@__model" class="form-label"></label>
+    }
     <span asp-validation-for="@__model" class="invalid-feedback"></span>
 </div>
